--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Bilal Mehmood Says: </h1>
+    <h1>Bilal Mehmood & All Says: </h1>
     <h1>Hello World!</h1>
   </body>
 </html>
